# dtka-builder

./: .gitignore  README.md  pyproject.toml
.github/workflows/: render.yml
data/: cards.yaml  placemats.yaml
src/drink_the_koolaid_renderer/: __init__.py  models.py  render.py
templates/: card.html  placemat.html
